src/assets/styles/helpers.scss
@charset 'UTF-8';

// Background Helpers
.vd-bg-pattern-gray {
  background-image:
    linear-gradient(
      45deg,
      $vd-neutral-lighter 25%,
      transparent 25%
    ),
    linear-gradient(
      -45deg,
      $vd-neutral-lighter 25%,
      transparent 25%
    ),
    linear-gradient(
      45deg,
      transparent 75%,
      $vd-neutral-lighter 75%
    ),
    linear-gradient(
      -45deg,
      transparent 75%,
      $vd-neutral-lighter 75%
    );
  background-size: 2px 2px;
  background-position: 0 0, 1px 0, 1px -1px, 0 1px;
}

.vd-bg-pattern-green-bright {
  color: $black;

  @include vd-pattern-dotted($pattern-dotted-green-bright);
}

.vd-bg-pattern-green {
  color: $black;

  @include vd-pattern-dotted($pattern-dotted-green);
}

.vd-bg-pattern-purple {
  @include vd-pattern-dotted($pattern-bars-purple);
}

.vd-bg-pattern-bars-gray {
  background-image:
    linear-gradient(
      45deg,
      $vd-neutral-lighter 25%,
      transparent 25%,
      transparent 50%,
      $vd-neutral-lighter 50%,
      $vd-neutral-lighter 75%,
      transparent 75%,
      transparent
    );
  background-size: 4px 4px;
}

// Spacing helpers
.vd-offset-top {
  @include media-breakpoint-up(md) {
    margin-top: ($spacer * -2.1);
  }
}

// text helpers
.vd-text-green {
  color: $vd-primary-dark;
}

.vd-text-gray {
  color: $gray-500;
}

.vd-text-thin {
  font-weight: 300;
}

.vd-link-invisible {
  color: currentColor;
  text-decoration: none;

  &:hover {
    color: currentColor;
  }
}

.vd-font-familiy-headings {
  font-family: $headings-font-family;
  font-weight: $lead-font-weight;
}

/**
 * Spacing
 */
.vd-w-md-50 {
  @include media-breakpoint-up(md) {
    width: 50% !important;
  }
}

